[package]
name = "fe-image-widget"
version = "0.1.1"
edition = "2018"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "fltk egui image widget support."
documentation = "https://docs.rs/fe-image-widget"
repository = "https://github.com/Ar37-rs/fe-image-widget"
readme = "README.md"
keywords = ["fltk-egui", "fltk", "egui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk-egui = "0.3"

[features]
default = ["png", "jpeg", "gif", "bmp", "ico", "webp"]
svg = ["tiny-skia", "usvg", "resvg"]
png = ["image/png"]
jpeg = ["image/jpeg"]
jpeg_rayon = ["image/jpeg_rayon", "default"]
bmp = ["image/bmp"]
ico = ["image/ico"]
gif = ["image/gif"]
webp = ["image/webp"]
tga = ["image/tga"]
pnm = ["image/pnm"]
hdr = ["image/hdr"]
dxt = ["image/dxt"]
dds = ["image/dds"]
farbfeld = ["image/farbfeld"]

[dependencies.image]
version = "0.23"
optional = true
default-features = false

[dependencies.tiny-skia]
version = "0.6"
optional = true

[dependencies.usvg]
version = "0.19"
optional = true

[dependencies.resvg]
version = "0.19"
optional = true
